# efuns

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.light  Makefile  README.md  authors.txt  changes.org  changes.txt  configure  dune  dune-project  efuns.opam  env.sh  main.ml  mkconfig  mkconfig.light  mkfile  readme.txt  semgrep.jsonnet  todo.org
.claude/: settings.local.json
.github/workflows/: docker.yml
config/: default_config.ml  pad.ml
docs/: Editor.nw  Editor_extra.nw  Makefile  Makefile.common  defs_and_uses.list  efuns.nw  latex  lineage.txt  mkfile
docs/literate/: Editor.nw  Editor_extra.nw  Makefile  defs_and_uses.list
libs/commons/: concur.ml  concur.mli  genlex_.ml  genlex_.mli  log.ml  log.mli  options.ml  utils.ml  utils.mli
modes/major_modes/: buffer_menu.ml  dired.ml  magit.ml  magit.mli  outline_mode.ml  shell.ml
modes/minor_modes/: abbrevs_mode.ml  fill_mode.ml  minor_mode_sample.ml  tab_mode.ml
modes/pfff_modes/: bash_mode.mli  caml_mode.mli  cpp_mode.mli  dockerfile_mode.ml  dockerfile_mode.mli  dune  haskell_mode.ml  haskell_mode.mli  javascript_mode.mli  jsonnet_mode.mli  markdown_mode.ml  markdown_mode.mli  noweb_mode.ml  noweb_mode.mli  pfff_modes.ml  pfff_modes.mli  python_mode.mli  rust_mode.mli  scala_mode.mli  yaml_mode.ml  yaml_mode.mli  zig_mode.ml  zig_mode.mli
modes/prog_modes/: bento.ml  c_lexer.mll  common_indenter.ml  lisp_mode.ml  makefile_mode.ml  ocaml_lexer.mll  ocaml_merlin.ml  ocaml_mode.ml
modes/text_modes/: org_mode.ml  tex_mode.mll
src/core/: dune  ebuffer.ml  efuns.ml  error.ml  frame.ml  frame.mli  globals.ml  globals.mli  text.ml  top_window.ml  top_window.mli
src/features/: compil.ml  interactive.ml  minibuffer.ml  misc_features.ml  multi_buffers.ml  multi_frames.ml  search.ml  select.ml  system.ml  system.mli  transform.ml
src/graphics/gtk_cairo2/: dune  graphics_efuns.ml  test_libs.ml
src/graphics/libdraw/: graphics_efuns.ml
src/graphics/ocamlgraphics/: graphics_efuns.ml
src/ipc/: efuns_client.ml  server.ml  server.mli
src/main/: CLI.ml  CLI.mli  Main.ml  dune
src/tests/: dune  helpers_efuns.ml  test_efuns.ml  unit_frame.ml  unit_magit.ml  unit_magit.mli  unit_search.ml  unit_text.ml
tests/bugfixes/frame_cursor_oob/: BUG_REPRO_STEPS.md  bug_repro.txt
tests/bugfixes/stale_second_cursor/: BUG_REPRO_STEPS.md
tests/ml/: no_trailing_newline.ml
