(env
 (dev
  ; TODO :standard is
  ; -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence -strict-formats -short-paths -keep-locs 
  ; TODO: I added -33 for unused open but useful because xix-libs and semgrep-libs
  ;  are different and xix-libs require some open Common to see List_, Regexp_, etc.
  ; TODO: I added -21 because ocaml-light does not detect execv will not return
  (flags (-w +A-4-6-21-29-33-44-45-52-70 -warn-error +a)))
 (release
  (flags (:standard -O3))))

(dirs :standard \ docs external)
