opam-version: "2.0"
name: "efuns"
version: "0.1.0"
synopsis: "Stuff"
description: """
More stuff
"""

maintainer: "Yoann Padioleau <yoann.padioleau@gmail.com>"
authors: [ "Yoann Padioleau <yoann.padioleau@gmail.com>" ]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/aryx/fork-efuns"
dev-repo: "git+https://github.com/aryx/fork-efuns"
bug-reports: "https://github.com/aryx/fork-efuns/issues"

#TODO: there are also tons of dependencies to semgrep and also codemap!
# see Dockerfile and its 'dune install ...' command
depends: [
  "dune" {>= "3.7" }
  "logs"
  "lablgtk"
  "cairo2-gtk"
  "cairo2-pango"
]

build: [make]
