(library
 (name efuns_pfff_modes)
 (wrapped false)
 (libraries
   ; system libs
   commons

   ; efuns libs
   efuns_core efuns_features
   efuns_major_modes efuns_minor_modes
   efuns_prog_modes

   ; from semgrep-pfff-langs
   highlighters
   database_code
   graph_code

)
 (preprocess (pps ppx_interactive))
)
